--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-webpack": "^0.1202.1",
+    "@angular-devkit/build-webpack": "^0.1202.2",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
@@ -28,13 +28,16 @@
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@capacitor/storage": "^1.0.3",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "glob": "^7.1.7",
+    "natives": "^1.1.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.1",
+    "@angular-devkit/build-angular": "^12.2.2",
     "@angular-devkit/core": "^12.2.0",
     "@angular-eslint/builder": "~12.0.0",
     "@angular-eslint/eslint-plugin": "~12.0.0",
@@ -46,6 +49,7 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.1.2",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
