--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
@@ -30,6 +31,7 @@
     "@capacitor/storage": "^1.0.3",
     "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "firebase": "^8.10.0",
     "glob": "^7.1.7",
     "natives": "^1.1.6",
     "rxjs": "~6.6.0",
